# src/api/users.ts
@@ -1,54 +1,72 @@
-import request from '@/utils/request'
+import request from "@/utils/request";
 
 export const getUsers = (params: any) =>
   request({
-    url: '/users',
-    method: 'get',
+    url: "/users",
+    method: "get",
     params
-  })
+  });
 
 export const getUserInfo = (data: any) =>
   request({
-    url: '/users/info',
-    method: 'post',
+    url: "/user/info",
+    method: "post",
     data
-  })
+  });
 
 export const getUserByName = (username: string) =>
   request({
     url: `/users/${username}`,
-    method: 'get'
-  })
+    method: "get"
+  });
 
-export const updateUser = (username: string, data: any) =>
+export const getUser = (id: number, params: any) =>
   request({
-    url: `/users/${username}`,
-    method: 'put',
+    url: `/users/${id}`,
+    method: "get",
+    params
+  });
+export const getUserPermissions = (id: number, params: any) =>
+  request({
+    url: `/users/${id}/permissions`,
+    method: "get",
+    params
+  });
+export const addUser = (data: any) =>
+  request({
+    url: `/users`,
+    method: "post",
     data
-  })
+  });
+export const updateUser = (id: number, data: any) =>
+  request({
+    url: `/users/${id}`,
+    method: "put",
+    data
+  });
 
 export const deleteUser = (username: string) =>
   request({
     url: `/users/${username}`,
-    method: 'delete'
-  })
+    method: "delete"
+  });
 
 export const login = (data: any) =>
   request({
-    url: '/users/login',
-    method: 'post',
+    url: "/login",
+    method: "post",
     data
-  })
+  });
 
 export const logout = () =>
   request({
-    url: '/users/logout',
-    method: 'post'
-  })
+    url: "/logout",
+    method: "post"
+  });
 
 export const register = (data: any) =>
   request({
-    url: '/users/register',
-    method: 'post',
+    url: "/register",
+    method: "post",
     data
-  })
+  });
